Ignore WLED transitions in DMX mode

--- a/wled00/data/settings_sync.htm
+++ b/wled00/data/settings_sync.htm
@@ -176,6 +176,7 @@ DMX mode:
 <option value=6>Multi RGBW</option>
 <option value=10>Preset</option>
 </select><br>
+DMX ignore transitions: <input name="IT" type="checkbox"><br>
 <a href="https://kno.wled.ge/interfaces/e1.31-dmx/" target="_blank">E1.31 info</a><br>
 Timeout: <input name="ET" type="number" min="1" max="65000" required> ms<br>
 Force max brightness: <input type="checkbox" name="FB"><br>
